src/test/ui/type/type-parameter-defaults-referencing-Self.stderr
error[E0393]: the type parameter `T` must be explicitly specified
  --> $DIR/type-parameter-defaults-referencing-Self.rs:10:16
   |
LL | fn foo(x: &dyn Foo) { }
   |                ^^^ missing reference to `T`
   |
   = note: because of the default `Self` reference, type parameters must be specified on object types

error: aborting due to previous error

For more information about this error, try `rustc --explain E0393`.
